-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.7.0
-
None
-
db3c1cb230e1f2ca9053590d72ecb22a2582c439
From http://doc.qt.io/qt-5/qlocale.html#details:
QString::toInt(), QString::toDouble(), etc., interpret the string according to the default locale. If this fails, it falls back on the "C" locale.
From http://doc.qt.io/qt-5/qstring.html#toDouble:
The string conversion will always happen in the 'C' locale. For locale dependent conversion use QLocale::toDouble()