QLocale: Remove misleading link to QString::toDouble() conversion

While at it, add the comment to the toFloat() functions also.

Task-number: QTBUG-55232
Change-Id: I21c06363946f35fb3d89a51e4f75be392b57c0a9
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>